feat(core) updated module-info.class for JDK 25+
The core lwjgl.jar now includes two module-info.class files, one in
versions/11 and one in versions/25. The new module-info.class:

* Drops the jdk.unsupported module requirement
* Exports the org.lwjgl.system.ffm package